tp3-ingress/pod-red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color-red
  namespace: myingress
  labels:
    app: web
spec:
  containers:
    - name: simple-webapp-color
      image: mmumshad/simple-webapp-color
      ports:
        - containerPort: 8080
