tp3-ingress/service-clusterip-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip-web
  namespace: myingress
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: web
