tp3-ingress/ingress-web-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mon-domaine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-clusterip-web
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
